# chronosync-desktop

./: .env  Cargo.toml
src/: color_convert.rs  icon_manager.rs  main.rs  session_storage.rs  supabase.rs
