[package]
name = "chronosync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
eframe = "0.26.2"  # egui framework
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "psapi", "handleapi"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
keyring = "2.3.2"
chrono = { version = "0.4.33", features = ["serde"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.11.1"
once_cell = "1.19.0"
parking_lot = "0.12.1"
dotenv = "0.15.0"
crossbeam-channel = "0.5"
webbrowser = "0.8"
winreg = "0.50"
url = "2.5.0"
tiny_http = "0.12"
portpicker = "0.1"
urlencoding = "2.1.3"
dirs = "5.0"
ico = "0.3.0"
base64 = "0.21.0"
image = "0.24.7"
path-slash = "0.2.1"
